<package>
  <name>wge100_camera_firmware</name>
  <version>1.8.5</version>
  <description >
    Source for the WGE100 Ethernet camera: Verilog source for the
    FPGA, Forth source for the camera firmware.  Intended for camera
    developers.  Note that a built binary from this package is checked
    in under wge100_camera/firmware_images/
  </description>
  <author>James Bowman</author>
  <author>Blaise Gassend</author>
  <author>MAC by Jared Casper and Morgan Quigley</author>

  <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>  
  <url type="website">http://ros.org/wiki/wge100_camera_firmware</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>gforth</build_depend>

  <run_depend>gforth</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>


